examples/type_system/failing/116_keyword_alias_end.flx
fn foo() -> Int {
    1
end
